# tribot

./: Cargo.toml  README.md  initial_state.json
scripts/: run_bot.sh
src/: commands.rs  event.rs  main.rs  state.rs  utils.rs
