[package]
name = "discord_bot"
version = "0.1.0"
authors = ["trimill <trimil016@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fern = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.7"
itertools = "0.9"
meval = "0.2"
reqwest = "0.10"
chrono = "0.4"
async-trait = "0.1"
serenity = { version = "0.9", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
tokio = { version = "0.2", features = ["macros", "signal"] }

