[package]
name = "discord_bot"
version = "0.1.0"
authors = ["trimill"]
edition = "2018"
license = "GPL-3"
repository = "https://github.com/trimill/tribot.git"
homepage = "https://github.com/trimill/tribot"

[dependencies]
log = "0.4"
fern = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.7"
itertools = "0.9"
meval = "0.2"
chrono = "0.4"
tokio = { version = "0.2", features = ["macros", "signal"] }
reqwest = "0.10"
async-trait = "0.1"
serenity = { version = "0.9", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }

